[project]
name = "liquidity-mapping"
version = "0.1.0"
description = "CLI tool for analyzing crypto liquidity, volume, and open interest across exchanges"
requires-python = ">=3.11"
dependencies = [
    "questionary>=2.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy>=2.0.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "plotext>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
liqmap = "src.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
